--- a/Ps2ExeXobfuscator/src/config.json
+++ b/Ps2ExeXobfuscator/src/config.json
@@ -1,10 +1,10 @@
 {
-    "ps_script": "hook.ps1",
+    "ps_script": "script.ps1",
     "exe_name": "HOOK6",
     "icon": "False",
     "icon_path": "Atom.ico",
     "title": "Title",
-    "description": "Description",
+    "description": "provided using Ps2ExeXobfuscator by DARKNOSY",
     "product": "Product",
     "company": "Company",
     "copyright": "Copyright",
